src/snapshots/mkvdump__tests__parse_incomplete_file_should_not_panic.snap
---
source: src/main.rs
assertion_line: 890
expression: "parse_buffer_to_end(include_bytes!(\"../inputs/incomplete.hdr\"))"
---
- id: EBML
  header_size: 5
  size: 40
  children:
    - id: EBMLVersion
      header_size: 3
      size: 4
      value: 1
    - id: EBMLReadVersion
      header_size: 3
      size: 4
      value: 1
    - id: EBMLMaxIDLength
      header_size: 3
      size: 4
      value: 4
    - id: EBMLMaxSizeLength
      header_size: 3
      size: 4
      value: 8
    - id: DocType
      header_size: 3
      size: 11
      value: matroska
    - id: DocTypeVersion
      header_size: 3
      size: 4
      value: 4
    - id: DocTypeReadVersion
      header_size: 3
      size: 4
      value: 2
- id: Segment
  header_size: 12
  size: 6618
  children:
    - id: SeekHead
      header_size: 5
      size: 70
      children:
        - id: CRC-32
          header_size: 2
          size: 6
          value: "[c7 c3 2b 17]"
        - id: Seek
          header_size: 3
          size: 14
          children:
            - id: SeekID
              header_size: 3
              size: 7
              value: Info
            - id: SeekPosition
              header_size: 3
              size: 4
              value: 229
        - id: Seek
          header_size: 3
          size: 15
          children:
            - id: SeekID
              header_size: 3
              size: 7
              value: Tracks
            - id: SeekPosition
              header_size: 3
              size: 5
              value: 272
        - id: Seek
          header_size: 3
          size: 15
          children:
            - id: SeekID
              header_size: 3
              size: 7
              value: Tags
            - id: SeekPosition
              header_size: 3
              size: 5
              value: 343
        - id: Seek
          header_size: 3
          size: 15
          children:
            - id: SeekID
              header_size: 3
              size: 7
              value: Cues
            - id: SeekPosition
              header_size: 3
              size: 5
              value: 6560
    - id: Void
      header_size: 9
      size: 159
      value: ~
    - id: Info
      header_size: 5
      size: 43
      children:
        - id: CRC-32
          header_size: 2
          size: 6
          value: "[8e 09 74 4b]"
        - id: TimestampScale
          header_size: 4
          size: 7
          value: 1000000
        - id: MuxingApp
          header_size: 3
          size: 7
          value: Lavf
        - id: WritingApp
          header_size: 3
          size: 7
          value: Lavf
        - id: Duration
          header_size: 3
          size: 11
          value: 10000
    - id: Tracks
      header_size: 5
      size: 71
      children:
        - id: CRC-32
          header_size: 2
          size: 6
          value: "[9f 90 75 5f]"
        - id: TrackEntry
          header_size: 9
          size: 60
          children:
            - id: TrackNumber
              header_size: 2
              size: 3
              value: 1
            - id: TrackUID
              header_size: 3
              size: 4
              value: 1
            - id: FlagLacing
              header_size: 2
              size: 3
              value: 0
            - id: Language
              header_size: 4
              size: 7
              value: und
            - id: CodecID
              header_size: 2
              size: 7
              value: V_VP9
            - id: TrackType
              header_size: 2
              size: 3
              value: video
            - id: DefaultDuration
              header_size: 4
              size: 8
              value: 40000000
            - id: Video
              header_size: 9
              size: 16
              children:
                - id: PixelWidth
                  header_size: 2
                  size: 4
                  value: 360
                - id: PixelHeight
                  header_size: 2
                  size: 3
                  value: 240
    - id: Tags
      header_size: 6
      size: 142
      children:
        - id: CRC-32
          header_size: 2
          size: 6
          value: "[19 f8 55 eb]"
        - id: Tag
          header_size: 10
          size: 62
          children:
            - id: Targets
              header_size: 10
              size: 14
              children:
                - id: TagTrackUID
                  header_size: 3
                  size: 4
                  value: 1
            - id: SimpleTag
              header_size: 10
              size: 38
              children:
                - id: TagName
                  header_size: 3
                  size: 10
                  value: ENCODER
                - id: TagString
                  header_size: 3
                  size: 18
                  value: Lavc libvpx-vp9
        - id: Tag
          header_size: 10
          size: 68
          children:
            - id: Targets
              header_size: 10
              size: 14
              children:
                - id: TagTrackUID
                  header_size: 3
                  size: 4
                  value: 1
            - id: SimpleTag
              header_size: 10
              size: 44
              children:
                - id: TagName
                  header_size: 3
                  size: 11
                  value: DURATION
                - id: TagString
                  header_size: 3
                  size: 23
                  value: "00:00:10.000000000"

